--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.0"
   }
 }
