--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "online-store-app",
   "version": "0.0.1",
   "private": true,
@@ -29,22 +29,22 @@
     ]
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.23.0",
-    "json-server": "^0.16.3",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
+    "@reduxjs/toolkit": "1.6.2",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "axios": "0.23.0",
+    "json-server": "0.16.3",
+    "node-sass": "6.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.5",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "web-vitals": "^1.1.2"
+    "redux": "4.1.1",
+    "web-vitals": "1.1.2"
   },
   "devDependencies": {
-    "jest": "^26.6.0"
+    "jest": "26.6.0"
   }
 }
