--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "online-store-app",
   "version": "0.0.1",
   "private": true,
@@ -34,8 +34,11 @@
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
     "axios": "0.23.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "json-server": "0.16.3",
     "node-sass": "6.0.1",
+    "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
